fix: Remove unreadably thin font-weight from PubEdge

--- a/client/components/PubEdge/pubEdge.scss
+++ b/client/components/PubEdge/pubEdge.scss
@@ -90,7 +90,6 @@
 			flex: 0 0 auto;
 			font-family: $header-font;
 			font-size: 12px;
-			font-weight: 300;
 		}
 
 		li:last-child {
